Move dot-configs to a file_root, oh-my-zsh to a dot-config sls, add submodule for ntp, add config example for server.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "roots/formulas/salt"]
 	path = roots/formulas/salt
 	url = https://github.com/saltstack-formulas/salt-formula.git
+[submodule "roots/formulas/ntp"]
+	path = roots/formulas/ntp
+	url = https://github.com/saltstack-formulas/ntp-formula.git
